[package]
name = "screeps-timing-annotate"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
timing = { path = "../timing" }
syn = { version = "1.0.16", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1.0.2"