[package]
name = "screeps-timing-annotate"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2018"

[lib]
proc_macro = true

[dependencies]
screeps-timing = { git = "https://github.com/Azaril/screeps-timing" }
syn = { version = "1.0.16", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1.0.2"